Resolve scroll issue and hide scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,12 @@ body {
     overflow: hidden;
   }
 }
+
+.hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
